2007-12-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-structures.h:
	* src/sj-extracting.c:
	* src/sj-prefs.c:
	Remove TrackData->iter, write better code instead.

2007-12-11  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer-48.png:
	* data/Makefile.am:
	Install 48px PNG icon (thanks Andreas Nilsson, #502933).

2007-12-07  Rob Bradford  <rob@robster.org.uk>

	* data/sound-juicer.glade:
	Change "Deselect all" to Ctrl-Shift-A instead of Ctrl-D. Patch
	courtesy of Ted Gould.
	Fixes bug #501442.

2007-11-14  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* src/sj-extracting.c: (check_file_size),
	(confirm_overwrite_existing_file), (pop_and_extract),
	(on_completion_cb), (on_extract_activate):
	Added "Overwrite All" and "Skip All" buttons (in addition to the
	"Overwrite" and "Skip" buttons) when an existing file is detected.
	Fixes bug #130782.

2007-10-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.20.1.

2007-10-08  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Unset the temporary iterators after a rip, and check the iterator
	is valid before using it.  Maybe, just maybe, this fixes #403870.

2007-10-08  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sj-extracting.c:
	Only lock the drive when we're about to extract, and ensure its
	unlocked when finished. (#484535).

2007-09-27  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-util.c:
	Fix logic bug in error handling when creating directories
	(#481025, thanks William Lachance).

2007-09-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Reference the initial profile to stop crashing when profiles are
	edited (#440400, Stefan Röllin)

2007-09-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.20.0.

2007-09-03  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in: bump gstreamer requirement to 0.10.5
	* src/sj-play.c: (select_track), (on_seek_release):