@@ -1,3 +1,11 @@
+2007-12-19  Rob Bradford  <rob@robster.org.uk>
+
+	* src/sj-main.c: (selected_album_changed), (multiple_album_dialog)
+	Make the continue button sensitive iff an album is selected. Also
+	check that there is a selection before trying to retrieve the contents
+	of the selected row.
+	Fixes bug #500815.
+
 2007-12-19  Ross Burton  <ross@burtonini.com>
 
 	* libjuicer/sj-structures.h:
